--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
   },
   "devDependencies": {
     "@storybook/addon-actions": "^5.3.14",
+    "@storybook/addon-knobs": "^5.3.14",
     "@storybook/addon-links": "^5.3.14",
+    "@storybook/addon-storysource": "^5.3.14",
     "@storybook/addons": "^5.3.14",
     "@storybook/preset-create-react-app": "^2.0.0",
     "@storybook/react": "^5.3.14",
