--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     ]
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^5.3.14",
     "@storybook/addon-actions": "^5.3.14",
+    "@storybook/addon-docs": "^5.3.14",
     "@storybook/addon-knobs": "^5.3.14",
     "@storybook/addon-links": "^5.3.14",
     "@storybook/addon-storysource": "^5.3.14",
