--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "learnstorybook-design-system",
+  "name": "poc-design-system",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -15,11 +15,16 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "cross-env BABEL_ENV=production babel src -d dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
+  },
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -37,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.8.4",
     "@storybook/addon-a11y": "^5.3.14",
     "@storybook/addon-actions": "^5.3.14",
     "@storybook/addon-docs": "^5.3.14",
@@ -46,6 +52,13 @@
     "@storybook/addons": "^5.3.14",
     "@storybook/preset-create-react-app": "^2.0.0",
     "@storybook/react": "^5.3.14",
+    "auto": "^9.18.0",
+    "cross-env": "^7.0.2",
     "prettier": "^1.19.1"
-  }
+  },
+  "description": "Learning design system",
+  "main": "dist/index.js",
+  "repository": "git@github.com:johnlyden/learnstorybook-design-system.git",
+  "author": "johnlyden <johnlydennc@gmail.com>",
+  "license": "MIT"
 }
