--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "build": "cross-env BABEL_ENV=production babel src -d dist",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
+    "release": "auto shipit",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
   },
