--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "cross-env BABEL_ENV=production babel src -d dist",
+    "build": "tsc --skipLibCheck",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "release": "auto shipit",
