--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^10.0.1",
     "@testing-library/user-event": "^7.1.2",
+    "cpx": "^1.5.0",
     "polished": "^3.5.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
@@ -16,7 +17,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "tsc --skipLibCheck",
+    "build": "tsc --skipLibCheck && yarn copy-woff2-to-lib",
+    "copy-woff2-to-lib": "cpx \"./src/**/*.otf\" ./dist/shared/fonts",
     "test": "jest",
     "eject": "react-scripts eject",
     "release": "auto shipit --verbose",
